--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Lucía Spangenberg" />
 
 
-<meta name="date" content="2022-12-02" />
+<meta name="date" content="2022-12-05" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -120,6 +120,28 @@ code span.vs { color: #4070a0; } /* VerbatimString */
 code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warning */
 </style>
 
+<style type="text/css">
+/* Used with Pandoc 2.11+ new --citeproc when CSL is used */
+div.csl-bib-body { }
+div.csl-entry {
+  clear: both;
+}
+.hanging div.csl-entry {
+  margin-left:2em;
+  text-indent:-2em;
+}
+div.csl-left-margin {
+  min-width:2em;
+  float:left;
+}
+div.csl-right-inline {
+  margin-left:2em;
+  padding-left:1em;
+}
+div.csl-indent {
+  margin-left: 2em;
+}
+</style>
 
 <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
@@ -147,6 +169,42 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="" data-path="análisis-estadístico-de-datos-genómicos.html"><a href="análisis-estadístico-de-datos-genómicos.html#uso-de-codones"><i class="fa fa-check"></i>Uso de codones</a></li>
 <li class="chapter" data-level="" data-path="análisis-estadístico-de-datos-genómicos.html"><a href="análisis-estadístico-de-datos-genómicos.html#exploración-multivariada-análisis-de-correspondencia"><i class="fa fa-check"></i>Exploración multivariada: Análisis de Correspondencia</a></li>
 </ul></li>
+</ul></li>
+<li class="part"><span><b>Genética de Poblaciones</b></span></li>
+<li class="chapter" data-level="2" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html"><i class="fa fa-check"></i><b>2</b> Genética de Poblaciones</a>
+<ul>
+<li class="chapter" data-level="2.1" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#lectura-de-un-archivo-vcf-con-genotipos-de-diversos-individuos"><i class="fa fa-check"></i><b>2.1</b> Lectura de un archivo VCF con genotipos de diversos individuos</a></li>
+<li class="chapter" data-level="2.2" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#el-equilibrio-de-hardy-weinberg-breve-introducción-teórica"><i class="fa fa-check"></i><b>2.2</b> El equilibrio de Hardy-Weinberg (breve introducción teórica)</a>
+<ul>
+<li class="chapter" data-level="" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#supuestos-que-asumimos-se-cumplen-para-h-w"><i class="fa fa-check"></i>Supuestos que asumimos se cumplen para H-W</a></li>
+</ul></li>
+<li class="chapter" data-level="2.3" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#equilibrio-de-hardy-weinberg-práctico"><i class="fa fa-check"></i><b>2.3</b> Equilibrio de Hardy-Weinberg (PRÁCTICO)</a></li>
+<li class="chapter" data-level="2.4" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#pasaje-de-los-genotipos-a-forma-numérica"><i class="fa fa-check"></i><b>2.4</b> Pasaje de los genotipos a forma numérica</a></li>
+<li class="chapter" data-level="2.5" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#muestras-y-poblaciones-en-nuestros-datos"><i class="fa fa-check"></i><b>2.5</b> Muestras y poblaciones en nuestros datos</a></li>
+<li class="chapter" data-level="2.6" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#análisis-de-componentes-principales"><i class="fa fa-check"></i><b>2.6</b> Análisis de Componentes Principales</a>
+<ul>
+<li class="chapter" data-level="2.6.1" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#pca-sin-na-y-con-reducido-número-de-marcadores"><i class="fa fa-check"></i><b>2.6.1</b> PCA sin NA y con reducido número de marcadores</a></li>
+</ul></li>
+<li class="chapter" data-level="2.7" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#paquetes-específicos-para-genética-de-poblaciones-adegenet-y-hierfstat"><i class="fa fa-check"></i><b>2.7</b> Paquetes específicos para genética de poblaciones (adegenet y hierfstat)</a></li>
+<li class="chapter" data-level="2.8" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#el-coeficiente-de-endocría-y-estadísticos-f-introducción-teórica"><i class="fa fa-check"></i><b>2.8</b> El Coeficiente de endocría y estadísticos <em>F</em> (introducción teórica)</a>
+<ul>
+<li class="chapter" data-level="2.8.1" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#estadísticos-f-práctico"><i class="fa fa-check"></i><b>2.8.1</b> Estadísticos <em>F</em> (práctico)</a></li>
+</ul></li>
+<li class="chapter" data-level="2.9" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#anális-de-pca-usando-paquetes-de-genética-de-poblaciones"><i class="fa fa-check"></i><b>2.9</b> Anális de PCA usando paquetes de genética de poblaciones</a></li>
+<li class="chapter" data-level="2.10" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#otra-forma-de-hacer-pca"><i class="fa fa-check"></i><b>2.10</b> OTRA FORMA DE HACER PCA</a>
+<ul>
+<li class="chapter" data-level="2.10.1" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#imputación"><i class="fa fa-check"></i><b>2.10.1</b> IMPUTACIÓN</a></li>
+</ul></li>
+<li class="chapter" data-level="2.11" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#ensembl-y-biomart"><i class="fa fa-check"></i><b>2.11</b> ENSEMBL y biomaRt</a></li>
+<li class="chapter" data-level="2.12" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#h-w-la-frecuencia-de-heterocigotas-en-función-de-la-frecuencia-alélica-intro-teórica"><i class="fa fa-check"></i><b>2.12</b> H-W: la frecuencia de heterocigotas en función de la frecuencia alélica (intro teórica)</a></li>
+<li class="chapter" data-level="2.13" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#heterocigosidad"><i class="fa fa-check"></i><b>2.13</b> Heterocigosidad</a></li>
+</ul></li>
+<li class="chapter" data-level="3" data-path="epidemio.html"><a href="epidemio.html"><i class="fa fa-check"></i><b>3</b> Epidemiología Genética</a>
+<ul>
+<li class="chapter" data-level="3.1" data-path="epidemio.html"><a href="epidemio.html#la-estimación-de-frecuencias-y-el-equilibrio-o-no"><i class="fa fa-check"></i><b>3.1</b> La estimación de frecuencias y el equilibrio (o no)</a></li>
+<li class="chapter" data-level="3.2" data-path="epidemio.html"><a href="epidemio.html#el-sistema-abo-introducción-teórica"><i class="fa fa-check"></i><b>3.2</b> El sistema ABO (introducción teórica)</a></li>
+<li class="chapter" data-level="3.3" data-path="epidemio.html"><a href="epidemio.html#la-estimación-de-frecuencias-en-el-locus-abo"><i class="fa fa-check"></i><b>3.3</b> La estimación de frecuencias en el locus ABO</a></li>
+<li class="chapter" data-level="3.4" data-path="epidemio.html"><a href="epidemio.html#estudios-de-asociación-de-genoma-completo-gwas"><i class="fa fa-check"></i><b>3.4</b> Estudios de Asociación de Genoma Completo (GWAS)</a></li>
 </ul></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
