--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Lucía Spangenberg" />
 
 
-<meta name="date" content="2022-12-02" />
+<meta name="date" content="2022-12-05" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -170,6 +170,42 @@ div.csl-indent {
 <li class="chapter" data-level="" data-path="análisis-estadístico-de-datos-genómicos.html"><a href="análisis-estadístico-de-datos-genómicos.html#exploración-multivariada-análisis-de-correspondencia"><i class="fa fa-check"></i>Exploración multivariada: Análisis de Correspondencia</a></li>
 </ul></li>
 </ul></li>
+<li class="part"><span><b>Genética de Poblaciones</b></span></li>
+<li class="chapter" data-level="2" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html"><i class="fa fa-check"></i><b>2</b> Genética de Poblaciones</a>
+<ul>
+<li class="chapter" data-level="2.1" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#lectura-de-un-archivo-vcf-con-genotipos-de-diversos-individuos"><i class="fa fa-check"></i><b>2.1</b> Lectura de un archivo VCF con genotipos de diversos individuos</a></li>
+<li class="chapter" data-level="2.2" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#el-equilibrio-de-hardy-weinberg-breve-introducción-teórica"><i class="fa fa-check"></i><b>2.2</b> El equilibrio de Hardy-Weinberg (breve introducción teórica)</a>
+<ul>
+<li class="chapter" data-level="" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#supuestos-que-asumimos-se-cumplen-para-h-w"><i class="fa fa-check"></i>Supuestos que asumimos se cumplen para H-W</a></li>
+</ul></li>
+<li class="chapter" data-level="2.3" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#equilibrio-de-hardy-weinberg-práctico"><i class="fa fa-check"></i><b>2.3</b> Equilibrio de Hardy-Weinberg (PRÁCTICO)</a></li>
+<li class="chapter" data-level="2.4" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#pasaje-de-los-genotipos-a-forma-numérica"><i class="fa fa-check"></i><b>2.4</b> Pasaje de los genotipos a forma numérica</a></li>
+<li class="chapter" data-level="2.5" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#muestras-y-poblaciones-en-nuestros-datos"><i class="fa fa-check"></i><b>2.5</b> Muestras y poblaciones en nuestros datos</a></li>
+<li class="chapter" data-level="2.6" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#análisis-de-componentes-principales"><i class="fa fa-check"></i><b>2.6</b> Análisis de Componentes Principales</a>
+<ul>
+<li class="chapter" data-level="2.6.1" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#pca-sin-na-y-con-reducido-número-de-marcadores"><i class="fa fa-check"></i><b>2.6.1</b> PCA sin NA y con reducido número de marcadores</a></li>
+</ul></li>
+<li class="chapter" data-level="2.7" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#paquetes-específicos-para-genética-de-poblaciones-adegenet-y-hierfstat"><i class="fa fa-check"></i><b>2.7</b> Paquetes específicos para genética de poblaciones (adegenet y hierfstat)</a></li>
+<li class="chapter" data-level="2.8" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#el-coeficiente-de-endocría-y-estadísticos-f-introducción-teórica"><i class="fa fa-check"></i><b>2.8</b> El Coeficiente de endocría y estadísticos <em>F</em> (introducción teórica)</a>
+<ul>
+<li class="chapter" data-level="2.8.1" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#estadísticos-f-práctico"><i class="fa fa-check"></i><b>2.8.1</b> Estadísticos <em>F</em> (práctico)</a></li>
+</ul></li>
+<li class="chapter" data-level="2.9" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#anális-de-pca-usando-paquetes-de-genética-de-poblaciones"><i class="fa fa-check"></i><b>2.9</b> Anális de PCA usando paquetes de genética de poblaciones</a></li>
+<li class="chapter" data-level="2.10" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#otra-forma-de-hacer-pca"><i class="fa fa-check"></i><b>2.10</b> OTRA FORMA DE HACER PCA</a>
+<ul>
+<li class="chapter" data-level="2.10.1" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#imputación"><i class="fa fa-check"></i><b>2.10.1</b> IMPUTACIÓN</a></li>
+</ul></li>
+<li class="chapter" data-level="2.11" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#ensembl-y-biomart"><i class="fa fa-check"></i><b>2.11</b> ENSEMBL y biomaRt</a></li>
+<li class="chapter" data-level="2.12" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#h-w-la-frecuencia-de-heterocigotas-en-función-de-la-frecuencia-alélica-intro-teórica"><i class="fa fa-check"></i><b>2.12</b> H-W: la frecuencia de heterocigotas en función de la frecuencia alélica (intro teórica)</a></li>
+<li class="chapter" data-level="2.13" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#heterocigosidad"><i class="fa fa-check"></i><b>2.13</b> Heterocigosidad</a></li>
+</ul></li>
+<li class="chapter" data-level="3" data-path="epidemio.html"><a href="epidemio.html"><i class="fa fa-check"></i><b>3</b> Epidemiología Genética</a>
+<ul>
+<li class="chapter" data-level="3.1" data-path="epidemio.html"><a href="epidemio.html#la-estimación-de-frecuencias-y-el-equilibrio-o-no"><i class="fa fa-check"></i><b>3.1</b> La estimación de frecuencias y el equilibrio (o no)</a></li>
+<li class="chapter" data-level="3.2" data-path="epidemio.html"><a href="epidemio.html#el-sistema-abo-introducción-teórica"><i class="fa fa-check"></i><b>3.2</b> El sistema ABO (introducción teórica)</a></li>
+<li class="chapter" data-level="3.3" data-path="epidemio.html"><a href="epidemio.html#la-estimación-de-frecuencias-en-el-locus-abo"><i class="fa fa-check"></i><b>3.3</b> La estimación de frecuencias en el locus ABO</a></li>
+<li class="chapter" data-level="3.4" data-path="epidemio.html"><a href="epidemio.html#estudios-de-asociación-de-genoma-completo-gwas"><i class="fa fa-check"></i><b>3.4</b> Estudios de Asociación de Genoma Completo (GWAS)</a></li>
+</ul></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
 
@@ -194,7 +230,7 @@ div.csl-indent {
 <h1 class="title">Herramientas de Bioinformática Aplicada al Estudio de Interacción Parásito-Hospedero</h1>
 <p class="author"><em>Hugo Naya<a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a></em></p>
 <p class="author"><em>Lucía Spangenberg<a href="#fn2" class="footnote-ref" id="fnref2"><sup>2</sup></a></em></p>
-<p class="date"><em>2022-12-02</em></p>
+<p class="date"><em>2022-12-05</em></p>
 </div>
 <div id="notas-y-tutorial-para-genética-de-poblaciones-humana-y-algo-de-epidemiología-genética" class="section level1 unnumbered hasAnchor">
 <h1>Notas y “tutorial” para genética de poblaciones humana y algo de epidemiología genética<a href="index.html#notas-y-tutorial-para-genética-de-poblaciones-humana-y-algo-de-epidemiología-genética" class="anchor-section" aria-label="Anchor link to header"></a></h1>
