--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:title" content="Herramientas de Bioinformática Aplicada al Estudio de Interacción Parásito-Hospedero" />
   <meta property="og:type" content="book" />
   
-  <meta property="og:description" content="Apuntes del curso Human Whole Exome Analysis" />
+  <meta property="og:description" content="Apuntes del curso Herramientas de Bioinformática Aplicada al Estudio de Interacción Parásito-Hospedero" />
   <meta name="github-repo" content="rstudio/bookdown-demo" />
 
   <meta name="twitter:card" content="summary" />
@@ -159,7 +159,7 @@ div.csl-indent {
 <li><a href="./">Proka-Host 2022</a></li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Notas y “tutorial” para genética de poblaciones humana y algo de epidemiología genética</a></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Notas y “tutorial” para genómica comparativa y composicional de procariotas, genética de poblaciones humana y algo de epidemiología genética</a></li>
 <li class="part"><span><b>Genética de Poblaciones</b></span></li>
 <li class="chapter" data-level="1" data-path="análisis-estadístico-de-datos-genómicos.html"><a href="análisis-estadístico-de-datos-genómicos.html"><i class="fa fa-check"></i><b>1</b> Análisis estadístico de datos genómicos</a>
 <ul>
