--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@ div.csl-indent {
 <p class="author"><em>Lucía Spangenberg<a href="#fn2" class="footnote-ref" id="fnref2"><sup>2</sup></a></em></p>
 <p class="date"><em>2022-12-05</em></p>
 </div>
-<div id="notas-y-tutorial-para-genética-de-poblaciones-humana-y-algo-de-epidemiología-genética" class="section level1 unnumbered hasAnchor">
-<h1>Notas y “tutorial” para genética de poblaciones humana y algo de epidemiología genética<a href="index.html#notas-y-tutorial-para-genética-de-poblaciones-humana-y-algo-de-epidemiología-genética" class="anchor-section" aria-label="Anchor link to header"></a></h1>
+<div id="notas-y-tutorial-para-genómica-comparativa-y-composicional-genética-de-poblaciones-humana-y-algo-de-epidemiología-genética" class="section level1 unnumbered hasAnchor">
+<h1>Notas y “tutorial” para genómica comparativa y composicional de procariotas, genética de poblaciones humana y algo de epidemiología genética<a href="index.html#notas-y-tutorial-para-genética-de-poblaciones-humana-y-algo-de-epidemiología-genética" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <p>Las presentes notas son una breve y mínima introducción a algunas posibilidades que se nos presentan con datos genómicos para hacer genética evolutiva y de poblaciones, tanto en humanos como en procariotas, así como los pasos iniciales hacia la epidemiología genética. Hay, en algunos casos, una breve introducción teórica del tema a trabajar y en esos casos la misma es parte del libro “Introducción a la Genética de Poblaciones y a la Genética Cuantitativa” (disponible en <a href="https://blakngu.github.io/libro/" class="uri">https://blakngu.github.io/libro/</a>), pero en general el foco fue puesto en trabajar sobre los datos utilizando el programa <strong>R</strong> (<a href="https://cran.r-project.org" class="uri">https://cran.r-project.org</a>). Como no se asume una familiaridad importante con el mismo, varios ejercicios se centran en analizar los datos utilizando funciones básicas en lugar de utilizar paquetes específicos, lo que sin embargo se muestra más adelante.</p>
 <p><br />
 </p>
