--- a/análisis-estadístico-de-datos-genómicos.html
+++ b/análisis-estadístico-de-datos-genómicos.html
@@ -32,7 +32,7 @@
   
   
 <link rel="prev" href="index.html"/>
-
+<link rel="next" href="genética-de-poblaciones.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -170,6 +170,42 @@ div.csl-indent {
 <li class="chapter" data-level="" data-path="análisis-estadístico-de-datos-genómicos.html"><a href="análisis-estadístico-de-datos-genómicos.html#exploración-multivariada-análisis-de-correspondencia"><i class="fa fa-check"></i>Exploración multivariada: Análisis de Correspondencia</a></li>
 </ul></li>
 <li class="chapter" data-level="1.2" data-path="análisis-estadístico-de-datos-genómicos.html"><a href="análisis-estadístico-de-datos-genómicos.html#comparativa-con-metadatos-en-procariotas"><i class="fa fa-check"></i><b>1.2</b> Comparativa con metadatos en procariotas</a></li>
+</ul></li>
+<li class="part"><span><b>Genética de Poblaciones</b></span></li>
+<li class="chapter" data-level="2" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html"><i class="fa fa-check"></i><b>2</b> Genética de Poblaciones</a>
+<ul>
+<li class="chapter" data-level="2.1" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#lectura-de-un-archivo-vcf-con-genotipos-de-diversos-individuos"><i class="fa fa-check"></i><b>2.1</b> Lectura de un archivo VCF con genotipos de diversos individuos</a></li>
+<li class="chapter" data-level="2.2" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#el-equilibrio-de-hardy-weinberg-breve-introducción-teórica"><i class="fa fa-check"></i><b>2.2</b> El equilibrio de Hardy-Weinberg (breve introducción teórica)</a>
+<ul>
+<li class="chapter" data-level="" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#supuestos-que-asumimos-se-cumplen-para-h-w"><i class="fa fa-check"></i>Supuestos que asumimos se cumplen para H-W</a></li>
+</ul></li>
+<li class="chapter" data-level="2.3" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#equilibrio-de-hardy-weinberg-práctico"><i class="fa fa-check"></i><b>2.3</b> Equilibrio de Hardy-Weinberg (PRÁCTICO)</a></li>
+<li class="chapter" data-level="2.4" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#pasaje-de-los-genotipos-a-forma-numérica"><i class="fa fa-check"></i><b>2.4</b> Pasaje de los genotipos a forma numérica</a></li>
+<li class="chapter" data-level="2.5" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#muestras-y-poblaciones-en-nuestros-datos"><i class="fa fa-check"></i><b>2.5</b> Muestras y poblaciones en nuestros datos</a></li>
+<li class="chapter" data-level="2.6" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#análisis-de-componentes-principales"><i class="fa fa-check"></i><b>2.6</b> Análisis de Componentes Principales</a>
+<ul>
+<li class="chapter" data-level="2.6.1" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#pca-sin-na-y-con-reducido-número-de-marcadores"><i class="fa fa-check"></i><b>2.6.1</b> PCA sin NA y con reducido número de marcadores</a></li>
+</ul></li>
+<li class="chapter" data-level="2.7" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#paquetes-específicos-para-genética-de-poblaciones-adegenet-y-hierfstat"><i class="fa fa-check"></i><b>2.7</b> Paquetes específicos para genética de poblaciones (adegenet y hierfstat)</a></li>
+<li class="chapter" data-level="2.8" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#el-coeficiente-de-endocría-y-estadísticos-f-introducción-teórica"><i class="fa fa-check"></i><b>2.8</b> El Coeficiente de endocría y estadísticos <em>F</em> (introducción teórica)</a>
+<ul>
+<li class="chapter" data-level="2.8.1" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#estadísticos-f-práctico"><i class="fa fa-check"></i><b>2.8.1</b> Estadísticos <em>F</em> (práctico)</a></li>
+</ul></li>
+<li class="chapter" data-level="2.9" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#anális-de-pca-usando-paquetes-de-genética-de-poblaciones"><i class="fa fa-check"></i><b>2.9</b> Anális de PCA usando paquetes de genética de poblaciones</a></li>
+<li class="chapter" data-level="2.10" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#otra-forma-de-hacer-pca"><i class="fa fa-check"></i><b>2.10</b> OTRA FORMA DE HACER PCA</a>
+<ul>
+<li class="chapter" data-level="2.10.1" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#imputación"><i class="fa fa-check"></i><b>2.10.1</b> IMPUTACIÓN</a></li>
+</ul></li>
+<li class="chapter" data-level="2.11" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#ensembl-y-biomart"><i class="fa fa-check"></i><b>2.11</b> ENSEMBL y biomaRt</a></li>
+<li class="chapter" data-level="2.12" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#h-w-la-frecuencia-de-heterocigotas-en-función-de-la-frecuencia-alélica-intro-teórica"><i class="fa fa-check"></i><b>2.12</b> H-W: la frecuencia de heterocigotas en función de la frecuencia alélica (intro teórica)</a></li>
+<li class="chapter" data-level="2.13" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html#heterocigosidad"><i class="fa fa-check"></i><b>2.13</b> Heterocigosidad</a></li>
+</ul></li>
+<li class="chapter" data-level="3" data-path="epidemio.html"><a href="epidemio.html"><i class="fa fa-check"></i><b>3</b> Epidemiología Genética</a>
+<ul>
+<li class="chapter" data-level="3.1" data-path="epidemio.html"><a href="epidemio.html#la-estimación-de-frecuencias-y-el-equilibrio-o-no"><i class="fa fa-check"></i><b>3.1</b> La estimación de frecuencias y el equilibrio (o no)</a></li>
+<li class="chapter" data-level="3.2" data-path="epidemio.html"><a href="epidemio.html#el-sistema-abo-introducción-teórica"><i class="fa fa-check"></i><b>3.2</b> El sistema ABO (introducción teórica)</a></li>
+<li class="chapter" data-level="3.3" data-path="epidemio.html"><a href="epidemio.html#la-estimación-de-frecuencias-en-el-locus-abo"><i class="fa fa-check"></i><b>3.3</b> La estimación de frecuencias en el locus ABO</a></li>
+<li class="chapter" data-level="3.4" data-path="epidemio.html"><a href="epidemio.html#estudios-de-asociación-de-genoma-completo-gwas"><i class="fa fa-check"></i><b>3.4</b> Estudios de Asociación de Genoma Completo (GWAS)</a></li>
 </ul></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
@@ -685,7 +721,7 @@ ser suficientemente indicativos de por sí, o combinados con la
 información del COA. Por ejemplo, el <em>Nc</em>, o número efectivo de codones,
 es un índice del uso de codones intragénico. Puede tomar valores
 extremos de 20, cuando un solo codón por AA es utilizado en ese gen, a
-61, cuando hay una equi-distribución de los mismos <span class="citation">(<a href="#ref-Wright_1990" role="doc-biblioref">Wright 1990</a>)</span>. Este
+61, cuando hay una equi-distribución de los mismos <span class="citation">(<a href="#ref-Wright_1990" role="doc-biblioref">F. Wright 1990</a>)</span>. Este
 índice es sensible al contenido GC del genoma y una mejora fue sugerida
 posteriormente que toma en cuenta este factor <span class="citation">(<a href="#ref-Novembre_2002" role="doc-biblioref">Novembre 2002</a>)</span>. Otros
 dos índices, “codon bias index” (<em>CBI</em>) y “frequency of optimal codons”
@@ -3334,62 +3370,8 @@ expresión. Si bien es un juego de genes algo sesgado, vamos a usar las proteín
 <p>Como resumen de esta parte, hemos explorado distintos metadatos a partir de una tabla y sacado algunas conclusiones que tienen que ver con el contenido G+C, el tamaño genómico y la patogenicidad. En nuestro caso se trata de una tabla muy vieja, con genomas aún sin finalizar y el objetivo fue de docencia, pero actualizando la información disponible en diferentes bases de datos es posible encontrar relaciones muy interesantes, que para explotar de manera adecuada debemos incoporar la inercia filogenética, un tema para otro capítulo.</p>
 <hr />
 
-<div id="refs" class="references csl-bib-body hanging-indent">
-<div class="csl-entry">
-Benzecri, J P. 1980. <span>“Introduction a l’analyse Des Correspondances d’apres Un Exemple de Données Médicale.”</span> <em>Les Cahiers d’Analyse Des Données</em> V (3): 283–310.
-</div>
-<div class="csl-entry">
-Cortazzo, Patricia, Carlos Cerveñansky, Mónica Marín, Claude Reiss, Ricardo Ehrlich, and Atilio Deana. 2002. <span>“Silent Mutations Affect in Vivo Protein Folding in Escherichia Coli.”</span> <em>Biochemical and Biophysical Research Communications</em> 293 (1): 537–41. <a href="http://www.ncbi.nlm.nih.gov/pubmed/12054634">http://www.ncbi.nlm.nih.gov/pubmed/12054634</a>.
-</div>
-<div class="csl-entry">
-Ermolaeva, M D. 2001. <span>“Synonymous Codon Usage in Bacteria.”</span> <em>Current Issues in Molecular Biology</em> 3 (4): 91–97. <a href="http://www.ncbi.nlm.nih.gov/pubmed/11719972">http://www.ncbi.nlm.nih.gov/pubmed/11719972</a>.
-</div>
-<div class="csl-entry">
-Fox, Jesse M, and Ivan Erill. 2010. <span>“Relative Codon Adaptation: A Generic Codon Bias Index for Prediction of Gene Expression.”</span> <em>DNA Research an International Journal for Rapid Publication of Reports on Genes and Genomes</em> 17 (3): 185–96. <a href="http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=2885275&amp;tool=pmcentrez&amp;rendertype=abstract">http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=2885275&amp;tool=pmcentrez&amp;rendertype=abstract</a>.
-</div>
-<div class="csl-entry">
-Grigoriev, A. 1998. <span>“Analyzing Genomes with Cumulative Skew Diagrams.”</span> <em>Nucleic Acids Research</em> 26 (10): 2286–90. <a href="http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=147580&amp;tool=pmcentrez&amp;rendertype=abstract">http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=147580&amp;tool=pmcentrez&amp;rendertype=abstract</a>.
-</div>
-<div class="csl-entry">
-Novembre, John A. 2002. <span>“Accounting for Background Nucleotide Composition When Measuring Codon Usage Bias.”</span> <em>Molecular Biology and Evolution</em> 19 (8): 1390–94. <a href="http://mbe.oxfordjournals.org/content/19/8/1390.long">http://mbe.oxfordjournals.org/content/19/8/1390.long</a>.
-</div>
-<div class="csl-entry">
-Rocha, Eduardo P C. 2004. <span>“Codon Usage Bias from tRNA’s Point of View: Redundancy, Specialization, and Efficient Decoding for Translation Optimization.”</span> <em>Genome Research</em> 14 (11): 2279–86. <a href="http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=525687&amp;tool=pmcentrez&amp;rendertype=abstract">http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=525687&amp;tool=pmcentrez&amp;rendertype=abstract</a>.
-</div>
-<div class="csl-entry">
-Roymondal, Uttam, Shibsankar Das, and Satyabrata Sahoo. 2009. <span>“Predicting Gene Expression Level from Relative Codon Usage Bias: An Application to Escherichia Coli Genome.”</span> <em>DNA Research An International Journal for Rapid Publication of Reports on Genes and Genomes</em> 16 (1): 13–30. <a href="http://www.ncbi.nlm.nih.gov/pubmed/19131380">http://www.ncbi.nlm.nih.gov/pubmed/19131380</a>.
-</div>
-<div class="csl-entry">
-Sharp, P M, and W H Li. 1987. <span>“The Codon Adaptation Index–a Measure of Directional Synonymous Codon Usage Bias, and Its Potential Applications.”</span> <em>Nucleic Acids Research</em> 15 (3): 1281–95. <a href="http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&amp;db=PubMed&amp;dopt=Citation&amp;list_uids=3547335">http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve&amp;db=PubMed&amp;dopt=Citation&amp;list_uids=3547335</a>.
-</div>
-<div class="csl-entry">
-Sharp, P M, T M Tuohy, and K R Mosurski. 1986. <span>“Codon Usage in Yeast: Cluster Analysis Clearly Differentiates Highly and Lowly Expressed Genes.”</span> <em>Nucleic Acids Research</em> 14 (13): 5125–43. <a href="http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=311530&amp;tool=pmcentrez&amp;rendertype=abstract">http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=311530&amp;tool=pmcentrez&amp;rendertype=abstract</a>.
-</div>
-<div class="csl-entry">
-Sueoka, Noboru. 1962. <span>“ON THE GENETIC BASIS OF VARIATION AND HETEROGENEITY OF DNA BASE COMPOSITION.”</span> <em>Proceedings of the National Academy of Sciences of the United States of America</em> 48 (4): 582–92. <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC220819/">http://www.ncbi.nlm.nih.gov/pmc/articles/PMC220819/</a>.
-</div>
-<div class="csl-entry">
-Wright, F. 1990. <span>“The <span>‘Effective Number of Codons’</span> Used in a Gene.”</span> <em>Gene</em> 87 (1): 23–29. <a href="http://www.ncbi.nlm.nih.gov/pubmed/2110097">http://www.ncbi.nlm.nih.gov/pubmed/2110097</a>.
-</div>
-<div class="csl-entry">
-Yakovchuk, Peter, Ekaterina Protozanova, and Maxim D Frank-Kamenetskii. 2006. <span>“Base-Stacking and Base-Pairing Contributions into Thermal Stability of the DNA Double Helix.”</span> <em>Nucleic Acids Research</em> 34 (2): 564–74. <a href="http://www.ncbi.nlm.nih.gov/pubmed/16449200">http://www.ncbi.nlm.nih.gov/pubmed/16449200</a>.
-</div>
-<div class="csl-entry">
-Zerial, M, J Salinas, J Filipski, and G Bernardi. 1986. <span>“Gene Distribution and Nucleotide Sequence Organization in the Human Genome.”</span> <em>The Federation of European Biochemical Societies Journal</em> 160 (3): 479–85. <a href="http://www.ncbi.nlm.nih.gov/pubmed/3780716">http://www.ncbi.nlm.nih.gov/pubmed/3780716</a>.
 </div>
 </div>
-</div>
-</div>
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -3454,8 +3436,8 @@ determinado y de acuerdo con la siguiente expresión:
           </div>
         </div>
       </div>
-<a href="index.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-
+<a href="index.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="genética-de-poblaciones.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
