--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:title" content="Herramientas de Bioinformática Aplicada al Estudio de Interacción Parásito-Hospedero" />
   <meta property="og:type" content="book" />
   
-  <meta property="og:description" content="Apuntes del curso Herramientas de Bioinformática Aplicada al Estudio de Interacción Parásito-Hospedero" />
+  <meta property="og:description" content="Apuntes del curso Human Whole Exome Analysis" />
   <meta name="github-repo" content="rstudio/bookdown-demo" />
 
   <meta name="twitter:card" content="summary" />
@@ -24,7 +24,7 @@
 <meta name="author" content="Lucía Spangenberg" />
 
 
-<meta name="date" content="2022-12-05" />
+<meta name="date" content="2022-12-06" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -169,6 +169,7 @@ div.csl-indent {
 <li class="chapter" data-level="" data-path="análisis-estadístico-de-datos-genómicos.html"><a href="análisis-estadístico-de-datos-genómicos.html#uso-de-codones"><i class="fa fa-check"></i>Uso de codones</a></li>
 <li class="chapter" data-level="" data-path="análisis-estadístico-de-datos-genómicos.html"><a href="análisis-estadístico-de-datos-genómicos.html#exploración-multivariada-análisis-de-correspondencia"><i class="fa fa-check"></i>Exploración multivariada: Análisis de Correspondencia</a></li>
 </ul></li>
+<li class="chapter" data-level="1.2" data-path="análisis-estadístico-de-datos-genómicos.html"><a href="análisis-estadístico-de-datos-genómicos.html#comparativa-con-metadatos-en-procariotas"><i class="fa fa-check"></i><b>1.2</b> Comparativa con metadatos en procariotas</a></li>
 </ul></li>
 <li class="part"><span><b>Genética de Poblaciones</b></span></li>
 <li class="chapter" data-level="2" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html"><i class="fa fa-check"></i><b>2</b> Genética de Poblaciones</a>
@@ -230,11 +231,12 @@ div.csl-indent {
 <h1 class="title">Herramientas de Bioinformática Aplicada al Estudio de Interacción Parásito-Hospedero</h1>
 <p class="author"><em>Hugo Naya<a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a></em></p>
 <p class="author"><em>Lucía Spangenberg<a href="#fn2" class="footnote-ref" id="fnref2"><sup>2</sup></a></em></p>
-<p class="date"><em>2022-12-05</em></p>
+<p class="date"><em>2022-12-06</em></p>
 </div>
-<div id="notas-y-tutorial-para-genómica-comparativa-y-composicional-genética-de-poblaciones-humana-y-algo-de-epidemiología-genética" class="section level1 unnumbered hasAnchor">
-<h1>Notas y “tutorial” para genómica comparativa y composicional de procariotas, genética de poblaciones humana y algo de epidemiología genética<a href="index.html#notas-y-tutorial-para-genómica-comparativa-y-composicional-genética-de-poblaciones-humana-y-algo-de-epidemiología-genética" class="anchor-section" aria-label="Anchor link to header"></a></h1>
+<div id="notas-y-tutorial-para-genómica-comparativa-y-composicional-de-procariotas-genética-de-poblaciones-humana-y-algo-de-epidemiología-genética" class="section level1 unnumbered hasAnchor">
+<h1>Notas y “tutorial” para genómica comparativa y composicional de procariotas, genética de poblaciones humana y algo de epidemiología genética<a href="index.html#notas-y-tutorial-para-genómica-comparativa-y-composicional-de-procariotas-genética-de-poblaciones-humana-y-algo-de-epidemiología-genética" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <p>Las presentes notas son una breve y mínima introducción a algunas posibilidades que se nos presentan con datos genómicos para hacer genética evolutiva y de poblaciones, tanto en humanos como en procariotas, así como los pasos iniciales hacia la epidemiología genética. Hay, en algunos casos, una breve introducción teórica del tema a trabajar y en esos casos la misma es parte del libro “Introducción a la Genética de Poblaciones y a la Genética Cuantitativa” (disponible en <a href="https://blakngu.github.io/libro/" class="uri">https://blakngu.github.io/libro/</a>), pero en general el foco fue puesto en trabajar sobre los datos utilizando el programa <strong>R</strong> (<a href="https://cran.r-project.org" class="uri">https://cran.r-project.org</a>). Como no se asume una familiaridad importante con el mismo, varios ejercicios se centran en analizar los datos utilizando funciones básicas en lugar de utilizar paquetes específicos, lo que sin embargo se muestra más adelante.</p>
+<p>El componente de genómica comparativa y composicional de procariotas es independiente del componente de genética de poblaciones humanas y epidemiología, por lo que el segundo puede realizarse sin haber hecho el primero.</p>
 <p><br />
 </p>
 
