--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Lucía Spangenberg" />
 
 
-<meta name="date" content="2022-12-05" />
+<meta name="date" content="2022-12-06" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -159,7 +159,7 @@ div.csl-indent {
 <li><a href="./">Proka-Host 2022</a></li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Notas y “tutorial” para genética de poblaciones humana y algo de epidemiología genética</a></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Notas y “tutorial” para genómica comparativa y composicional de procariotas, genética de poblaciones humana y algo de epidemiología genética</a></li>
 <li class="part"><span><b>Genética de Poblaciones</b></span></li>
 <li class="chapter" data-level="1" data-path="análisis-estadístico-de-datos-genómicos.html"><a href="análisis-estadístico-de-datos-genómicos.html"><i class="fa fa-check"></i><b>1</b> Análisis estadístico de datos genómicos</a>
 <ul>
@@ -169,6 +169,7 @@ div.csl-indent {
 <li class="chapter" data-level="" data-path="análisis-estadístico-de-datos-genómicos.html"><a href="análisis-estadístico-de-datos-genómicos.html#uso-de-codones"><i class="fa fa-check"></i>Uso de codones</a></li>
 <li class="chapter" data-level="" data-path="análisis-estadístico-de-datos-genómicos.html"><a href="análisis-estadístico-de-datos-genómicos.html#exploración-multivariada-análisis-de-correspondencia"><i class="fa fa-check"></i>Exploración multivariada: Análisis de Correspondencia</a></li>
 </ul></li>
+<li class="chapter" data-level="1.2" data-path="análisis-estadístico-de-datos-genómicos.html"><a href="análisis-estadístico-de-datos-genómicos.html#comparativa-con-metadatos-en-procariotas"><i class="fa fa-check"></i><b>1.2</b> Comparativa con metadatos en procariotas</a></li>
 </ul></li>
 <li class="part"><span><b>Genética de Poblaciones</b></span></li>
 <li class="chapter" data-level="2" data-path="genética-de-poblaciones.html"><a href="genética-de-poblaciones.html"><i class="fa fa-check"></i><b>2</b> Genética de Poblaciones</a>
